chapter04:dependency-injection-scopes

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "Busso"
 include ':app'
 include ':libs:location:api'
 include ':libs:location:rx'
+include ':libs:mvp'
 include ':libs:ui:navigation'
