--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,14 @@ dependencies {
 
     // Navigation utility
     implementation project(path: ':libs:ui:navigation')
+    implementation project(path: ':libs:mvp')
 
     // Testing Dependencies
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.robolectric:robolectric:$robolectric_version"
     testImplementation "androidx.test:core:$androidx_test_core_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$ok_http_version"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 }
